[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["bench", "fuzz"]

[workspace.package]
categories = ["encoding"]
homepage = "https://github.com/kevinheavey/five8"
keywords = ["base58", "encoding"]
repository = "https://github.com/kevinheavey/five8"

[workspace.dependencies]
five8 = { path = "crates/five8", version = "0.2.0" }
five8_const = { path = "crates/five8_const", version = "0.1.3" }
five8_core = { path = "crates/five8_core", version = "0.1.0" }
