[package]
name = "five8-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bs58 = "0.4.0"
five8.path = ".."

[profile.release]
debug = 1

[[bin]]
name = "encode_32"
path = "fuzz_targets/encode_32.rs"
test = false
doc = false

[[bin]]
name = "encode_64"
path = "fuzz_targets/encode_64.rs"
test = false
doc = false

[[bin]]
name = "decode_32"
path = "fuzz_targets/decode_32.rs"
test = false
doc = false

[[bin]]
name = "decode_64"
path = "fuzz_targets/decode_64.rs"
test = false
doc = false
