[package]
name = "five8_const"
version = "0.1.4"
edition = "2021"
resolver = "2"
description = "Compile-time base58 decoding."
license = "MIT"
homepage.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true
include = ["src", "Cargo.toml", "README.md"]

[dependencies]
five8_core.workspace = true
