[package]
name = "five8_core"
version = "0.1.2"
edition = "2021"
resolver = "2"
license = "MIT"
description = "Core utilities for the five8 crates."
homepage.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
std = []

[package.metadata.docs.rs]
features = ["std"]
rustdoc-args = ["--cfg=docsrs"]
