[package]
name = "five8_core"
version = "1.0.0"
edition = "2021"
resolver = "2"
license = "MIT"
description = "Core utilities for the five8 crates."
homepage.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version = "1.81"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg=docsrs"]
